# hello_world_jenkins

./: .gitignore  CMakeLists.txt  Jenkinsfile  main.cpp  run.sh
scripts/: build.sh
